# windows-security-auditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIXES_SUMMARY.md  LICENSE  README.md  REFACTORING_SUMMARY.md  SECURITY_FIX_REPORT.md  SECURITY_FIX_USERS_SUMMARY.md  TESTS_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  security_auditor.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: CONFIGURATION.md  USAGE_EXAMPLES.md
src/winsec_auditor/: __init__.py  __main__.py  cli.py  config.py  scanner.py  types.py  utils.py
src/winsec_auditor/checks/: __init__.py  autorun.py  events.py  firewall.py  network.py  registry.py  security_sw.py  services.py  system.py  updates.py  users.py
tests/: README.md  conftest.py  test_cli.py  test_config.py  test_integration.py  test_report.py  test_scanner.py  test_utils.py
tests/test_checks/: test_all_checks.py  test_autorun.py  test_events.py  test_firewall.py  test_network.py  test_registry.py  test_security_sw.py  test_services.py  test_system.py  test_updates.py  test_users.py
